4/factor/marked.txt
Trying to build factor: 
gcc -Wall factor.c my_math.c
factor.c:2:9: fatal error: conio.h: No such file or directory
 #include<conio.h>
         ^~~~~~~~~
compilation terminated.
my_math.c: In function 'is_prime':
my_math.c:6:21: error: 'num' undeclared (first use in this function)
   if (n % 2 == 0 && num > 2) return 0;
                     ^~~
my_math.c:6:21: note: each undeclared identifier is reported only once for each function it appears in
Couldn't compile factor! (10 marks!) Make sure your program compiles.
